# EasyXT

./: .env.example  .gitignore  .gitmodules  06_扩展API学习教程.md  ARCHITECTURE.md  EASY_START_GUIDE.md  Git_Commit_规范指南.md  INSTALL.md  LICENSE  PATH_GUIDE.md  PTRADE_CONVERSION_GUIDE.md  QUICK_INSTALL.md  QUICK_START.md  README.md  README_OLD.md  SETUP_GUIDE.md  convert_demo.py  converted_ptrade_strategy.py  converted_strategy_by_converter.py  converted_strategy_by_simple_converter.py  final_ptrade_strategy.py  install_easyxt.bat  jq_api_complete_documentation.md  jq_api_documentation.md  jq_demo_strategy.py  ptrade_demo_strategy.py  pyproject.toml  requirements.txt  requirements_realtime.txt  run_gui.py  start_gui.py  start_qmt.py  start_qmt_interactive.py  start_xueqiu_follow_easyxt.py  tdx_easyxt_config.json  优化分析报告.md  使用攻略.md  公众号推文_真正支持MacLinux.md  启动雪球跟单.bat  常用Git命令速查.md  (+2 more)
PYPlugins/: .gitignore  (+1 more)
easy_xt/: README.md  __init__.py  advanced_trade_api.py  api.py  check_xtquant.py  config.py  data_api.py  data_types.py  dragon_tiger.py  enhanced_data_api.py  extended_api.py  factor_library.py  fallback_fetcher.py  financial_data.py  formula_parser.py  fundamental_enhanced.py  indicators.py  install.bat  load_config.py  money_flow.py  pyproject.toml  qmt_paths.py  sector_data.py  start_monitor.py  start_qmt.py  start_qmt_interactive.py  tdx_client.py  trade_api.py  triple_source_manager.py  utils.py  validators.py
easy_xt/alpha_analysis/: example_usage.py  layered_backtest.py  start_platform.py  start_platform_with_qmt.py
easy_xt/realtime_data/: __init__.py  api_server.py  config_manager.py  http_server.py  log_manager.py  monitor_service.py  performance_monitor.py  push_service.py  scheduler.py  service_manager.py  unified_api.py  validator.py
easy_xt/realtime_data/cache/: cache_manager.py  cache_strategy.py  memory_cache.py  redis_cache.py
easy_xt/realtime_data/monitor/: alert_manager.py  api_monitor.py  data_source_monitor.py  integration.py  metrics_collector.py  system_monitor.py
easy_xt/realtime_data/providers/: base_provider.py  eastmoney_provider.py  eastmoney_provider_v2.py  tdx_provider.py  tdx_provider_enhanced.py  tdx_provider_optimized.py
easyxt_backtest/: README.md  __init__.py  data_manager-old.py  data_manager.py  engine.py  engine_v2.py  enhanced_backtest_engine.py  install.bat  monitor_10year.py  optimize_duckdb_loading.py  performance.py  portfolio_daily_result.py  position_manager.py  pyproject.toml  requirements.txt  setup.py  simple_strategy_adapter.py  strategy_base.py  vectorized_engine.py
easyxt_backtest/analysis/: __init__.py
easyxt_backtest/api/: __init__.py  grid_api.py  selection_api.py  technical_api.py
easyxt_backtest/config/: __init__.py  strategy_loader.py
easyxt_backtest/config/examples/: alpha101_strategy.yaml  multi_factor_strategy.yaml  simple_small_cap.yaml
easyxt_backtest/core/: __init__.py  backtest_core.py
easyxt_backtest/examples/: test_simple_strategy_v2.py  test_yaml_config.py
easyxt_backtest/factors/: __init__.py  alpha101.py  alpha191.py  base.py  calculator.py  fundamental_factors.py  neutralization.py  normalization.py  operators.py  technical_factors.py  technical_factors_optimized.py
easyxt_backtest/filters/: __init__.py  base.py  engine.py  fundamental_filter.py  industry_filter.py  market_filter.py  region_filter.py  stock_status_filter.py
easyxt_backtest/live_strategies/alpha101_live/: main.py  strategy_config.py  strategy_logic.py
easyxt_backtest/live_trading/: __init__.py  code_generator.py
easyxt_backtest/ml/: __init__.py  predictor.py  trainer.py
easyxt_backtest/portfolio/: __init__.py  builder.py  risk_control.py  weight_methods.py
easyxt_backtest/scoring/: __init__.py  multi_factor_scorer.py  weight_manager.py
easyxt_backtest/strategies/: __init__.py  config_driven_strategy.py  grid_strategy.py  small_cap_strategy.py  technical.py
easyxt_backtest/web_app/: README.md  config_editor.py  requirements.txt  start_web_app.py  streamlit_app.py
jq2qmt_adapter/: README.md  __init__.py  pyproject.toml
(+460 files in other folders)
