[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-xt"
version = "0.1.0"
description = "Unified helpers and adapters for EasyXT integration"
readme = "README.md"
authors = [{ name = "王者quant", email = "2174721315@qq.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
  "pydantic>=1.10,<3",
  "requests>=2.31"
]

[project.urls]
Homepage = "https://github.com/quant-king299/EasyXT"
Source = "https://github.com/quant-king299/EasyXT"
Documentation = "https://github.com/quant-king299/EasyXT/blob/main/easy_xt/README.md"

[tool.setuptools]
packages = ["easy_xt"]

[tool.setuptools.package-dir]
easy_xt = "."
