[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "easyxt-backtest"
version = "0.2.0"
description = "Universal backtesting framework for quantitative trading strategies"
readme = "README.md"
authors = [{ name = "MiniQMT Team", email = "noreply@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
  "pandas>=1.3.0",
  "numpy>=1.21.0",
  "matplotlib>=3.5.0",
  "requests>=2.25.0"
]

[project.urls]
Homepage = "https://github.com/quant-king299/EasyXT"
Source = "https://github.com/quant-king299/EasyXT"
Documentation = "https://github.com/quant-king299/EasyXT/blob/main/easyxt_backtest/README.md"

[project.scripts]
# 如需 CLI，可在 easyxt_backtest/cli.py 内实现 main()
# easyxt-backtest = "easyxt_backtest.cli:main"

[tool.flit.module]
name = "easyxt_backtest"
