[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easyxt-backtest"
version = "0.2.0"
description = "Universal backtesting framework for quantitative trading strategies"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "MiniQMT Team", email = "noreply@example.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "backtrader>=1.9.78",
    "PyYAML>=6.0",
    "matplotlib>=3.5.0",
    "requests>=2.25.0",
    "duckdb>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/quant-king299/EasyXT"
Source = "https://github.com/quant-king299/EasyXT"
Documentation = "https://github.com/quant-king299/EasyXT/blob/main/easyxt_backtest/README.md"

[tool.setuptools]
# 明确指定只包含 easyxt_backtest 及其子包
packages = ["easyxt_backtest"]

[tool.setuptools.package-dir]
# 关键：告诉 setuptools 当前目录就是 easyxt_backtest 包
"easyxt_backtest" = "."
